[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=2.9.0",
    "langchain>=1.3.10",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.6",
    "openai>=2.43.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]
